- Fix: Builder - Social Icons - Tiktok icon not appearing in customizer and on frontend.
- Fix: 'Disable Footer' option is missing in Page meta settings for new Header Footer builder.
- Fix: Removed 'Disable Footer Widgets' option in Page meta settings for new Header Footer builder.

v3.6.2
- Fix: Enable 'Preload Local Fonts' option affects on height of Gutenberg Cover edit block.
- Fix: Related Posts articles showing meta structure based on current active post.

v3.6.1
- Fix: Theme check warning - Replaced search form markup with get_search_form().
- Fix: Both desktop and mobile headers appearing on desktop due to Astra's cache.

v3.6.0
- New: Performance - Load Google Font locally. (https://wpastra.com/docs/self-hosted-google-fonts/)
- New: Performance - Preload locally hosted Google Font. (https://wpastra.com/docs/self-hosted-google-fonts/)
- Improvement: Added SVG logo height option to resolve the CLS issue. (https://wpastra.com/docs/fix-svg-logo-cls-issue/)
- Improvement: Added close button for multiselect selected items in Google font variants.
- Improvement: Changed customizer submenu control title from 'Container Animation' to 'Submenu Animation'.
- Improvement: Moved 'Submenu Animation' control from General tab to Design  tab.
- Improvement: Changed sub-menu container animation option name from 'Default' to 'None'.
- Improvement: Added headings font-weight support to widget-title headings. (https://wpastra.com/docs/font-weight-for-widget-titles/)
- Improvement: Changed Transparent Header Border Bottom default value from '' to 0;
- Fix: Customizer's font & color settings not reflecting in Gutenberg editor. (https://wpastra.com/astra-3-6/)
- Fix: Max-width responsive CSS enlarges logo size on mobile devices in old header layout.
- Fix: Cart Icon not working with Sticky Header after enabling the option "Hide when scrolling down" on mobile devices.
- Fix: Secondary menu not expendable on mobile when it is outside of Off Canvas.